--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,48 @@
     --color-accent: #1e3a8a;
 }
 
+html {
+    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
     background-color: var(--color-bg);
     color: var(--color-text);
-    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+ul,
+ol {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-primary);
+
+    &:hover {
+        color: var(--color-primary-hover);
+    }
+}
+
+button {
+    padding: 4px 8px;
+    font-family: 'Inter', serif;
+    font-weight: 600;
+    color: var(--color-text-secondary);
+
+    background: var(--color-accent);
+    border: 2px solid var(--color-border);
+    border-radius: .4rem;
+}
+
+select {
+    padding: 4px;
+
+    font-family: 'Inter', serif;
+    font-weight: 400;
+    color: var(--color-text-secondary);
+
+    background: var(--color-bg-secondary);
+    border: 2px solid var(--color-border);
+    border-radius: .4rem;
 }
