--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('./header.css');
+@import url('./dialog.css');
 @import url('./footer.css');
 
 /* Modo Claro */
@@ -65,6 +66,11 @@ textarea {
     border: 1px solid var(--color-primary);
 }
 
+a,
+button {
+    cursor: pointer;
+}
+
 input {
     padding: 4px 6px;
     background: var(--color-bg-secondary);
@@ -87,9 +93,21 @@ button {
     }
 }
 
+button.big {
+    width: 80%;
+
+    font-size: 1.2rem;
+    font-weight: 900;
+
+    background: var(--color-primary);
+    border: 2px solid var(--color-border);
+    border-radius: .8rem;
+}
+
 select {
     padding: 4px;
 
+    color: var(--color-text);
     font-weight: 400;
 
     background: var(--color-bg-secondary);
