Add function to get and show the products, and get categories to show with the products

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url('./header.css');
 @import url('./dialog.css');
 @import url('./footer.css');
+@import url('./productCard.css');
 
 /* Modo Claro */
 :root {
