--- a/styles/productCard.css
+++ b/styles/productCard.css
@@ -1,3 +1,10 @@
+.product-container {
+    padding: .5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+
 .product-card {
     display: flex;
     flex-direction: column;
