--- a/styles/productCard.css
+++ b/styles/productCard.css
@@ -9,10 +9,14 @@
     display: flex;
     flex-direction: column;
     max-width: 300px;
+    max-height: max-content;
     background: var(--color-bg-secondary);
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+
+    position: relative;
+    z-index: 0;
 }
 
 .product-img {
@@ -33,14 +37,19 @@
 }
 
 #add-to-cart {
-    background-color: var(--color-accept);
+    background-color: olivedrab;
     border: none;
     color: white;
+    margin: 6px;
     padding: 12px;
     font-size: 16px;
-    width: 100%;
+    max-width: fit-content;
     cursor: pointer;
     border-radius: 5px;
+
+    position: absolute;
+    bottom: 10px;
+    z-index: 1;
 }
 
 #add-to-cart:disabled {
