--- a/styles/productCard.css
+++ b/styles/productCard.css
@@ -14,9 +14,6 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-
-    position: relative;
-    z-index: 0;
 }
 
 .product-img {
@@ -36,7 +33,7 @@
     margin: 15px 0;
 }
 
-#add-to-cart {
+.add-to {
     background-color: olivedrab;
     border: none;
     color: white;
@@ -46,13 +43,9 @@
     max-width: fit-content;
     cursor: pointer;
     border-radius: 5px;
-
-    position: absolute;
-    bottom: 10px;
-    z-index: 1;
 }
 
-#add-to-cart:disabled {
+.add-to:disabled {
     background-color: #ccc;
     cursor: not-allowed;
 }
